<?xml version="1.0"?>
<package>
        <name>depth_pkg</name>
        <version>0.8.1</version>
        <description>hi</description>
        <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
        <maintainer email="lol@lol.com">LOL</maintainer>
        <build_depend>message_generation</build_depend>
        <build_depend>std_msgs</build_depend>
        <run_depend>message_runtime</run_depend>
        <run_depend>rospy</run_depend>
        <run_depend>std_msgs</run_depend>
        <license>LOL</license>
        <author>LOL</author>
</package>
